New Git clone file merge -site folders, no bjve

--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -28,17 +28,17 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-02.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
-            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-02.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-04.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
+            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-04.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/AqTlBprieP0"> </a>
           </div>
           <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-01.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
-            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-05.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
+            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-05.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-03.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
-            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-03.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/barracuda-06.jpg" alt="Barracuda rotary shotgun tools for hydroblasting">
+            <img class="ms-thumb" src="/assets/img/product/thumb-barracuda-06.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -117,13 +117,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>2–22k psi</td>
-                      <td><span class="metric">140–1500 bar</span>
+                      <td>5–22k psi</td>
+                      <td><span class="metric">350–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>4.4–12 gpm</td>
-                      <td><span class="metric">17–45 l/min</span></td>
+                      <td>4.4–13.3 gpm</td>
+                      <td><span class="metric">17–50 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -181,13 +181,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>2–22k psi</td>
-                      <td><span class="metric">140–1500 bar</span>
+                      <td>5–22k psi</td>
+                      <td><span class="metric">350–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>4.3–11 gpm</td>
-                      <td><span class="metric">16–42 l/min</span></td>
+                      <td>4.3–12.1 gpm</td>
+                      <td><span class="metric">16–46 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -248,7 +248,8 @@ master-slider: yes
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#h9c" aria-controls="h9c" role="tab" data-toggle="tab">BC-H9-C</a></li>
                 <li role="presentation"><a href="#h9lf" aria-controls="h9lf" role="tab" data-toggle="tab">BC-H9LF-C</a></li>
-                <li role="presentation"><a href="#h9xx" aria-controls="h9xx" role="tab" data-toggle="tab">BC-H9XXLF-C-TI</a></li>
+                <li role="presentation"><a href="#h9xlf" aria-controls="h9xlf" role="tab" data-toggle="tab">BC-H9-XLF-C</a></li>
+                <li role="presentation"><a href="#h9xxlf" aria-controls="h9xxlf" role="tab" data-toggle="tab">BC-H9-XLF-C-TI</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
@@ -265,13 +266,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>20-44k psi</td>
-                      <td><span class="metric">1400–3000 bar</span>
+                      <td>25-44k psi</td>
+                      <td><span class="metric">1700–3000 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>5.0–7.4 gpm</td>
-                      <td><span class="metric">19–28 l/min</span></td>
+                      <td>5.6–8.8 gpm</td>
+                      <td><span class="metric">21-33 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -329,13 +330,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>20-44k psi</td>
-                      <td><span class="metric">1400–3000 bar</span>
+                      <td>25-44k psi</td>
+                      <td><span class="metric">1700–3000 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>2.9–4.8 gpm</td>
-                      <td><span class="metric">11–18 l/min</span></td>
+                      <td>4.3-6.7 gpm</td>
+                      <td><span class="metric">16–25 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -379,8 +380,7 @@ master-slider: yes
                     </tr>
                   </tbody>
                   </table>           
-                </div>
-                <div role="tabpanel" class="tab-pane" id="h9xx">
+                </div><div role="tabpanel" class="tab-pane" id="h9xlf">
                   <table class="table specs table-hover">
                   <tbody>
                     <tr>
@@ -389,17 +389,81 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BC-H9XXLF-C-TI</td>
+                      <td colspan="2">BC-H9-XLF-C</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>20-44k psi</td>
-                      <td><span class="metric">1400–3000 bar</span>
+                      <td>25-44k psi</td>
+                      <td><span class="metric">1700–3000 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>1.7–3.1 gpm</td>
-                      <td><span class="metric">6–12 l/min</span></td>
+                      <td>3.5-5.6 gpm</td>
+                      <td><span class="metric">13-31 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Flow Coefficient</th>
+                      <td colspan="2">0.38 Cv</td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">9/16 HP Gland</td>
+                    </tr>
+                    <tr>
+                      <th>Port Size</th>
+                      <td colspan="2">7/16-20 UNF (S7)</td>
+                    </tr>
+                    <tr>
+                      <th>Nozzle Type</th>
+                      <td colspan="2">OS7</td>
+                    </tr>
+                    <tr>
+                      <th>Port Plug</th>
+                      <td colspan="2">OS7 002</td>
+                    </tr>
+                    <tr>
+                      <th>Diameter</th>
+                      <td>2.5 in.</td>
+                      <td><span class="metric">62 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>8.9 in.</td>
+                      <td><span class="metric">226 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>3.2 lb</td>
+                      <td><span class="metric">1.5 kg</span></td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Water Temp.</th>
+                      <td>160 &deg;F</td>
+                      <td><span class="metric">70 &deg;C</span></td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="h9xxlf">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Family</th>
+                      <td colspan="2">Barracuda</td>
+                    </tr>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">BC-H9-XLF-C-TI</td>
+                    </tr>
+                    <tr>
+                      <th>Pressure Range</th>
+                      <td>25-44k psi</td>
+                      <td><span class="metric">1700–3000 bar</span>
+                    </tr>
+                    <tr>
+                      <th>Flow Range</th>
+                      <td>2.3-3.8 gpm</td>
+                      <td><span class="metric">9-14 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -458,9 +522,10 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BC-K_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;22k Barracuda Models User Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BC-H9-C_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;44k Barracuda Models User Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BC-H9-XXLF-C-TI_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;44k XX Low Flow Barracuda User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BC-K_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;22k Barracuda Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BC-H9-C_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;44k Barracuda Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BC-H9-XLF-C_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;44k "Low Flow" Barracuda Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BC-H9-XXLF-C-TI_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;44k "XX Low Flow" Barracuda Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
@@ -895,7 +960,7 @@ master-slider: yes
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="/assets/img/sliders/bc_models.jpg" alt="Barracuda low flow shotgunning">
+        <img src="/assets/img/sliders/bc_models_02.jpg" alt="Barracuda low flow shotgunning">
       </div>
 
     </div><!-- End wrapper -->
