--- a/rotary-waterblast-tools/sg-swivel.html
+++ b/rotary-waterblast-tools/sg-swivel.html
@@ -123,7 +123,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">1/2 NPT, 1/2 BSPP</td>
+                      <td colspan="2">1/2 NPT</td>
                     </tr>
                     <tr>
                       <th>Shaft Connection</th>
@@ -175,7 +175,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/4 NPT, 3/4 BSPP</td>
+                      <td colspan="2">3/4 NPT</td>
                     </tr>
                     <tr>
                       <th>Shaft Connection</th>
@@ -573,8 +573,8 @@ master-slider: yes
                           <ul>
                             <li>1 x <strong>SG 006</strong> Seal</li>
                             <li>1 x <strong>SG 007</strong> Seal</li>
-                            <li>3 x <strong>SG 008</strong> O-Ring</li>
-                            <li>1 x <strong>SG 009</strong> Bearing, Ball</li>
+                            <li>1 x <strong>SG 008</strong> O-Ring</li>
+                            <li>3 x <strong>SG 009</strong> Bearing, Ball</li>
                             <li>1 x <strong>PL 518</strong> Tool Manual</li>
                           </ul>
                         </div>
