--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -77,7 +77,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="Hose Containment System">HCS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/autostroke" data-toggle="tooltip" title="AutoStroke">AST</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="Hose Containment System">HCS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
       </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -253,10 +253,6 @@ master-slider: yes
       <div class="item">
         <a href="/fin-fan-accessory"><img src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
         <h5>Fin Fan Accessory</h5></a>
-      </div>
-      <div class="item">
-        <a href="/autostroke"><img src="/assets/img/product/thumb-ast-02.jpg" alt="AutoStroke AST-100 for AutoBox tube lancing">
-        <h5>AutoStroke</h5></a>
       </div>
       <div class="item">
         <a href="/hose-containment"><img src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
