--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -80,7 +80,7 @@ master-slider: yes
       </ul>
       
       <div class="accessories">
-        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="Hose Containment System">HCS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/autostroke" data-toggle="tooltip" title="AutoStroke">AST</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
+        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="Hose Containment System">HCS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/banshee" data-toggle="tooltip" title="Banshee">BN</a>
       </div>
       
       <a href="/contact" class="btn btn-lg btn-block contact" role="button">Contact Us for Quote</a>
@@ -131,7 +131,7 @@ master-slider: yes
             <tr>
               <th>Hose Feed Rate</th>
               <td>0.3–3.0 ft/sec</td>
-              <td><span class="metric">0.09–0.9 m/sec</span></td>
+              <td><span class="metric">91-914 mm/sec</span></td>
             </tr>
             <tr>
               <th>Push/Pull Force</th>
@@ -269,10 +269,6 @@ master-slider: yes
       <div class="item">
         <a href="/hose-containment"><img class="img-responsive" src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
         <h5>Hose Containment System</h5></a>
-      </div>
-      <div class="item">
-        <a href="/autostroke"><img src="/assets/img/product/thumb-ast-02.jpg" alt="AutoStroke AST-100 for AutoBox tube lancing">
-        <h5>AutoStroke</h5></a>
       </div>
       <div class="item">
         <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe and exchanger tube cleaning">
