New Git clone file merge -orphan

--- a/podcast/industrial-theory.html
+++ b/podcast/industrial-theory.html
@@ -20,9 +20,81 @@ master-slider: yes
     
     <div class="row podcast-listing">
       <div class="col-sm-6">
+        <a href="/13-chad-kalland">
+          <img src="/assets/img/podcast/episode-13-chad-kalland.jpg" class="img-responsive" alt="Episode 13 - How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential" />
+          <h3 style="text-transform: none;">Chad Kalland: How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential</h3>
+          <p class="small gray">November 18, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <a href="/12-samantha-cervantes">
+          <img src="/assets/img/podcast/episode-12-samantha-cervantes.jpg" class="img-responsive" alt="Episode 12 - Don’t Get Left Behind: How Data Analytics Can Transform Our Industry" />
+          <h3 style="text-transform: none;">Samantha Cervantes: Don’t Get Left Behind: How Data Analytics Can Transform Our Industry<br>&nbsp;</h3>
+          <p class="small gray">October 21, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+    </div>
+    <div class="row podcast-listing">
+      <div class="col-sm-6">
+        <a href="/11-john-dijulius">
+          <img src="/assets/img/podcast/episode-11-john-dijulius.jpg" class="img-responsive" alt="Episode 11 - Creating a Customer Experience that Makes Your Brand One That People Can't Live Without" />
+          <h3 style="text-transform: none;">John DiJulius: Creating a Customer Experience that Makes Your Brand One That People Can't Live Without</h3>
+          <p class="small gray">September 30, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <a href="/10-mahesh-parameswaran">
+          <img src="/assets/img/podcast/episode-10-mahesh-parameswaren.jpg" class="img-responsive" alt="Episode 10 - Business in India and How COVID Will Speed up the Adaptation of Automation" />
+          <h3 style="text-transform: none;">Mahesh Parameswaran: Business in India and how COVID will speed up the adaptation of automation<br>&nbsp;</h3>
+          <p class="small gray">September 17, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+    </div>
+    <div class="row podcast-listing">
+      <div class="col-sm-6">
+        <a href="/9-peter-wright">
+          <img src="/assets/img/podcast/episode-9-peter-wright.jpg" class="img-responsive" alt="Episode 9 - What is the WJTA up to and what are the plans for the future?" />
+          <h3 style="text-transform: none;">Peter Wright: What is the WJTA up to and what are the plans for the future?</h3>
+          <p class="small gray">August 4, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <a href="/8-steven-trevino">
+          <img src="/assets/img/podcast/episode-8-steven-trevino.jpg" class="img-responsive" alt="Episode 8 - How does the world of robotics fit into industrial cleaning?" />
+          <h3 style="text-transform: none;">Steven Trevino: How does the world of robotics fit into industrial cleaning?</h3>
+          <p class="small gray">July 29, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+    </div>
+    <div class="row podcast-listing">
+      <div class="col-sm-6">
+        <a href="/7-ron-justin">
+          <img src="/assets/img/podcast/episode-7-ron-justin.jpg" class="img-responsive" alt="Episode 7 - Industrial automation will be a significant part of our future" />
+          <h3 style="text-transform: none;">Ron Justin: IoT is already part of our daily lives and will be broadly adopted by industry in the future</h3>
+          <p class="small gray">June 25, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+      <div class="col-sm-6">
+        <a href="/6-brad-clark">
+          <img src="/assets/img/podcast/episode-6-brad-clark.jpg" class="img-responsive" alt="Episode 6-Growing an industrial cleaning company is never easy... What has set HCPSC apart" />
+          <h3 style="text-transform: none;">Brad Clark: Growing an industrial cleaning company is never easy... What has set HCPSC apart</h3>
+          <p class="small gray">May 29, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+    </div>
+    <div class="row podcast-listing"> 
+      <div class="col-sm-6">
         <a href="/5-andreas-felske">
           <img src="/assets/img/podcast/episode-5-andreas-felske.jpg" class="img-responsive" alt="Episode 5 - Global Industrial Cleaning Safety Is Significantly Improving" />
-          <h3 style="text-transform: none;">Andreas Felske: With a Focused Leader, Global Industrial Cleaning Safety Is Significantly Improving<br/>&nbsp;</h3>
+          <h3 style="text-transform: none;">Andreas Felske: With a Focused Leader, Global Industrial Cleaning Safety Is Significantly Improving<br>&nbsp;</h3>
           <p class="small gray">March 30, 2020</p>
           <button class="btn">Listen</button>
         </a>
@@ -30,13 +102,13 @@ master-slider: yes
       <div class="col-sm-6">
         <a href="/4-david-beckum">
           <img src="/assets/img/podcast/episode-4-david-beckum.jpg" class="img-responsive" alt="Episode 4-How to Create a Great Industrial Cleaning Company by Investing in Your People" />
-          <h3 style="text-transform: none;">David Beckumk: How to Create a Great Industrial Cleaning Company by Investing in Your People</h3>
+          <h3 style="text-transform: none;">David Beckum: How to Create a Great Industrial Cleaning Company by Investing in Your People</h3>
           <p class="small gray">February 21, 2020</p>
           <button class="btn">Listen</button>
         </a>
-      </div>
+      </div>   
     </div>
-    <div class="row podcast-listing">
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/3-hashim-moraisel">
           <img src="/assets/img/podcast/episode-3-Hashim-Moraisel.jpg" class="img-responsive" alt="Episode 3-Why Investing in People and Partnerships are Key Components of Success in the Industrial Cleaning Industry" />
@@ -48,13 +120,13 @@ master-slider: yes
       <div class="col-sm-6">
         <a href="/2-marlies-tump">
           <img src="/assets/img/podcast/episode-2-marliese-tump.png" class="img-responsive" alt="Episode 2-The Importance of Workforce Safety Training in the Industrial Cleaning Industry" />
-          <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry<br/>&nbsp;</h3>
+          <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry<br>&nbsp;</h3>
           <p class="small gray">December 5, 2019</p>
           <button class="btn">Listen</button>
         </a>
       </div> 
     </div>
-    <div class="row podcast-listing">     
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/1-jimmy-peck">
           <img src="/assets/img/podcast/episode-1-jimmy-peck.png" class="img-responsive" alt="Episode 1-Leadership and Technology in the Industrial Cleaning Industry with Jimmy Peck" />
@@ -67,12 +139,11 @@ master-slider: yes
     
   </div>
 
-  <aside class="col-sm-3 col-sm-offset-2 padding-tb-30 cta">
+  <aside class="col-sm-3 col-sm-offset-2 padding-tb-30 cta" style="position: sticky; top:90px;">
     <a href="https://soundcloud.com/industrial_theory" target="_blank"><img src="/assets/img/podcast/IT_logo_square_lo.jpg" class="img-responsive"></a>
     <div style="padding-top:30px;">
       <a href="https://soundcloud.com/industrial_theory" target="_blank"><img src="/assets/img/podcast/soundcloud.png" alt="Listen on Soundcloud" class="img-responsive" style="margin-bottom:10px;" /></a>
-      <a href="https://podcasts.apple.com/us/podcast/leadership-technology-in-industrial-cleaning-industry/id1486235184?i=1000455925802" target="_blank"><img src="/assets/img/podcast/Apple_Podcasts_Listen_Badge_RGB.png" alt="Listen on iTunes" class="img-responsive" style="margin-bottom:10px;" /></a>
-      <a href="https://play.google.com/music/listen?u=0#/ps/Ifygsflp4gccqaraadsipl4ygae" target="_blank"><img src="/assets/img/podcast/google_podcasts_badge_01.png" alt="Listen on Google Play" class="img-responsive" style="margin-bottom:10px;" /></a>
+      <a href="https://podcasts.apple.com/us/podcast/industrial-theory/id1486235184" target="_blank"><img src="/assets/img/podcast/Apple_Podcasts_Listen_Badge_RGB.png" alt="Listen on iTunes" class="img-responsive" style="margin-bottom:10px;" /></a>
       <a href="https://www.stitcher.com/podcast/stoneage-tools/industrial-theory" target="_blank"><img src="/assets/img/podcast/Stitcher.png" alt="Listen on Stitcher" class="img-responsive" style="margin-bottom:10px;" /></a>
       <a href="https://open.spotify.com/show/1XdU0v1K0I38dyXIN0ubpI" target="_blank"><img src="/assets/img/podcast/spotify-badge-button-600.png" alt="Listen on Spotify" class="img-responsive" style="margin-bottom:10px;" /></a>
     </div>
