scrolling form = auto

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@ contact-main: yes
             <hr> 
             
             <!-- Pardot contact form -->
-            <iframe src="https://www2.stoneagetools.com/l/644393/2019-03-05/2h2lc" width="100%" scrolling="no" id="sizetracker" frameborder="0"></iframe>        
+            <iframe src="https://www2.stoneagetools.com/l/644393/2019-03-05/2h2lc" width="100%" scrolling="auto" id="sizetracker" frameborder="0"></iframe>        
               <!-- Pardot form sizing -->
               <script type="text/javascript">
                 // Create browser compatible event handler.
