--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/podcast"><img src="/assets/img/podcast/episode-13-chad-kalland.jpg" alt="Chad Kalland: How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential" class="img-responsive" style="margin-bottom:15px;" /></a>
-    <p><a href="/podcast"><strong>Industrial Theory Podcast #13</strong></a><br><span class="grey">Chad Kalland: How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential</span></p>
+    <a href="/podcast"><img src="/assets/img/podcast/episode-14-hans-borgt.jpg" alt="Chad Kalland: How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential" class="img-responsive" style="margin-bottom:15px;" /></a>
+    <p><a href="/podcast"><strong>Industrial Theory Podcast #14</strong></a><br><span class="grey">Hans Borgt: Industrial Cleaning Safety and Reviving the European Waterjetting Institute</span></p>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
     </div>
