--- a/podcast/industrial-theory.html
+++ b/podcast/industrial-theory.html
@@ -20,6 +20,14 @@ master-slider: yes
     
     <div class="row podcast-listing">
       <div class="col-sm-6">
+        <a href="/14-hans-borgt">
+          <img src="/assets/img/podcast/episode-14-hans-borgt.jpg" class="img-responsive" alt="Episode 14 - Industrial Cleaning Safety and Reviving the European Waterjetting Institute" />
+          <h3 style="text-transform: none;">Hans Borgt: Industrial Cleaning Safety and Reviving the European Waterjetting Institute<br>&nbsp;</h3>
+          <p class="small gray">Decemner 18, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+      <div class="col-sm-6">
         <a href="/13-chad-kalland">
           <img src="/assets/img/podcast/episode-13-chad-kalland.jpg" class="img-responsive" alt="Episode 13 - How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential" />
           <h3 style="text-transform: none;">Chad Kalland: How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential</h3>
@@ -27,6 +35,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/12-samantha-cervantes">
           <img src="/assets/img/podcast/episode-12-samantha-cervantes.jpg" class="img-responsive" alt="Episode 12 - Don’t Get Left Behind: How Data Analytics Can Transform Our Industry" />
@@ -35,8 +45,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/11-john-dijulius">
           <img src="/assets/img/podcast/episode-11-john-dijulius.jpg" class="img-responsive" alt="Episode 11 - Creating a Customer Experience that Makes Your Brand One That People Can't Live Without" />
@@ -45,16 +53,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/10-mahesh-parameswaran">
           <img src="/assets/img/podcast/episode-10-mahesh-parameswaren.jpg" class="img-responsive" alt="Episode 10 - Business in India and How COVID Will Speed up the Adaptation of Automation" />
-          <h3 style="text-transform: none;">Mahesh Parameswaran: Business in India and how COVID will speed up the adaptation of automation<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Mahesh Parameswaran: Business in India and how COVID will speed up the adaptation of automation</h3>
           <p class="small gray">September 17, 2020</p>
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/9-peter-wright">
           <img src="/assets/img/podcast/episode-9-peter-wright.jpg" class="img-responsive" alt="Episode 9 - What is the WJTA up to and what are the plans for the future?" />
@@ -63,6 +71,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/8-steven-trevino">
           <img src="/assets/img/podcast/episode-8-steven-trevino.jpg" class="img-responsive" alt="Episode 8 - How does the world of robotics fit into industrial cleaning?" />
@@ -71,8 +81,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/7-ron-justin">
           <img src="/assets/img/podcast/episode-7-ron-justin.jpg" class="img-responsive" alt="Episode 7 - Industrial automation will be a significant part of our future" />
@@ -81,6 +89,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/6-brad-clark">
           <img src="/assets/img/podcast/episode-6-brad-clark.jpg" class="img-responsive" alt="Episode 6-Growing an industrial cleaning company is never easy... What has set HCPSC apart" />
@@ -89,16 +99,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/5-andreas-felske">
           <img src="/assets/img/podcast/episode-5-andreas-felske.jpg" class="img-responsive" alt="Episode 5 - Global Industrial Cleaning Safety Is Significantly Improving" />
-          <h3 style="text-transform: none;">Andreas Felske: With a Focused Leader, Global Industrial Cleaning Safety Is Significantly Improving<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Andreas Felske: With a Focused Leader, Global Industrial Cleaning Safety Is Significantly Improving</h3>
           <p class="small gray">March 30, 2020</p>
           <button class="btn">Listen</button>
         </a>
-      </div>
+      </div>  
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/4-david-beckum">
           <img src="/assets/img/podcast/episode-4-david-beckum.jpg" class="img-responsive" alt="Episode 4-How to Create a Great Industrial Cleaning Company by Investing in Your People" />
@@ -106,9 +116,7 @@ master-slider: yes
           <p class="small gray">February 21, 2020</p>
           <button class="btn">Listen</button>
         </a>
-      </div>   
-    </div>
-    <div class="row podcast-listing"> 
+      </div> 
       <div class="col-sm-6">
         <a href="/3-hashim-moraisel">
           <img src="/assets/img/podcast/episode-3-Hashim-Moraisel.jpg" class="img-responsive" alt="Episode 3-Why Investing in People and Partnerships are Key Components of Success in the Industrial Cleaning Industry" />
@@ -117,16 +125,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/2-marlies-tump">
           <img src="/assets/img/podcast/episode-2-marliese-tump.png" class="img-responsive" alt="Episode 2-The Importance of Workforce Safety Training in the Industrial Cleaning Industry" />
-          <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry</h3>
           <p class="small gray">December 5, 2019</p>
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/1-jimmy-peck">
           <img src="/assets/img/podcast/episode-1-jimmy-peck.png" class="img-responsive" alt="Episode 1-Leadership and Technology in the Industrial Cleaning Industry with Jimmy Peck" />
