--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -43,6 +43,9 @@
 <div id="ap-tube-2-3-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/rJkYoPp5jmc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="cam-uni-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/z9PJYrXPePI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="hcs-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/sPuawSvBtDA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
