--- a/lp-demo.html
+++ b/lp-demo.html
@@ -3,7 +3,7 @@ layout: no-footer
 page-type: page
 title: Product Demos
 excerpt: Request a live demo of StoneAge equipment for high pressure industrial cleaning.
-permalink: /demo-2020
+permalink: /demo
 master-slider: yes
 ---
 
