--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -79,7 +79,7 @@ master-slider: yes
   <div class="tabs tabs-style-bar">
     <nav>
       <ul>
-        <li><a href="#section-bar-1"><span>Specifications</span></a></li>
+<!--        <li><a href="#section-bar-1"><span>Specifications</span></a></li>-->
         <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
 <!--        <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
 <!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
@@ -87,7 +87,7 @@ master-slider: yes
     </nav>
     <div class="content-wrap">
 
-      <!-- Specifications -->
+      <!-- Specifications
       <section id="section-bar-1">
         <div class="col-sm-5">
           <table class="table specs table-hover">
@@ -128,14 +128,14 @@ master-slider: yes
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
-      </section>
+      </section> -->
       
       <!-- Manuals/Docs -->
       <section id="section-bar-2">
         <div class="col-sm-8">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR44-45.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ID Pipe Cleaner Brochure</a></li>
+            <li><a href="/assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR44-45_02.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ID Pipe Cleaner Brochure</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
