--- a/contact.html
+++ b/contact.html
@@ -169,8 +169,8 @@ contact-main: yes
                 <a href="mailto:carrie.grant@stoneagetools.com">carrie.grant@stoneagetools.com</a>
               </p>
                <h3>USA - Northeast &amp; Central</h3>
-               <p>Jonathan Wood | +1 (970) 946-7212<br/>
-                 <a href="mailto:jonathan.wood@stoneagetools.com">jonathan.wood@stoneagetools.com</a>
+               <p>Contact Headquarters | +1 (970) 259-2869<br/>
+                 <a href="mailto:sales@stoneagetools.com">sales@stoneagetools.com</a>
                </p>
                <h3>USA - Southeast &amp; Texas</h3>
                <p>Sean Baker | +1 (440) 661-0022<br/>
