--- a/lp-sentinel.html
+++ b/lp-sentinel.html
@@ -2,7 +2,7 @@
 layout: default
 page-type: page
 title: Sentinel Automation Technology for Exchanger Tube Cleaning
-permalink: /sentinel_2020
+permalink: /sentinel
 master-slider: yes
 ---
 
